--- a/minecraft_project.ipynb
+++ b/minecraft_project.ipynb
@@ -16,7 +16,7 @@
     "## <ins>Introduction</ins>\n",
     "In recent years, artificial intelligence (AI) has been evolving at a rapid speed ([Tang et al., 2020](https://doi.org/10.1016/j.joi.2020.101094 )). With the many potential benefits that AI can bring, the adoption of AI technologies has spread across many fields including healthcare, business and education ([Rashid & Karim, 2024](https://doi.org/10.1016/j.hybadv.2024.100277 )). While AI is a life-changing and revolutionary technology, many experts have weighed in on the potential misuse of AI, sparking safety and privacy concerns for users across the world ([El-Helaly, 2024](https://doi.org/10.23749/mdl.v115i2.15835); [Khlaif et al., 2023](https://doi.org/10.2196/47049 ); [Rashid & Karim, 2024](https://doi.org/10.1016/j.hybadv.2024.100277 )). \n",
     "\n",
-    "With this, the Pacific Laboratory for Artificial Intelligence (PLAI) at the University of British Columbia (UBC), is focused on research on embodied AI—an artificial intelligence that can think, act, and learn similar to that of a human being ([PLAICraft, 2024](https://www.plaicraft.ai/ )). Here, the group's mission focuses on the research and development of safe and reliable AI systems that humans can trust ([PLAICraft, 2024](https://www.plaicraft.ai/ )). To help achieve this goal, the team has presented two datasets [sessions.csv](https://drive.google.com/uc?export=download&id=14O91N5OlVkvdGxXNJUj5jIsV5RexhzbB) and [players.csv](https://drive.google.com/uc?export=download&id=1Mw9vW0hjTJwRWx0bDXiSpYsO3gKogaPz) and [sessions.csv](https://drive.google.com/uc?export=download&id=14O91N5OlVkvdGxXNJUj5jIsV5RexhzbB) that can be used to identify which “kind” of player is likely to contribute a greater volume of data. This led to the central focus of this report; <ins> What age group is more likely to contribute more data based on total playtime using K-NN regression?</ins>\n",
+    "With this, the Pacific Laboratory for Artificial Intelligence (PLAI) at the University of British Columbia (UBC), is focused on research on embodied AI—an artificial intelligence that can think, act, and learn similar to that of a human being ([PLAICraft, 2024](https://www.plaicraft.ai/ )). Here, the group's mission focuses on the research and development of safe and reliable AI systems that humans can trust ([PLAICraft, 2024](https://www.plaicraft.ai/ )). To help achieve this goal, the team has presented two datasets [sessions.csv](https://drive.google.com/uc?export=download&id=14O91N5OlVkvdGxXNJUj5jIsV5RexhzbB) and [players.csv](https://drive.google.com/uc?export=download&id=1Mw9vW0hjTJwRWx0bDXiSpYsO3gKogaPz) that can be used to identify which “kind” of player is likely to contribute a greater volume of data. This led to the central focus of this report; <ins> What age group is more likely to contribute more data based on total playtime using K-NN regression?</ins>\n",
     "\n",
     "The two datasets provided are [players.csv](https://drive.google.com/uc?export=download&id=1Mw9vW0hjTJwRWx0bDXiSpYsO3gKogaPz) and [sessions.csv](https://drive.google.com/uc?export=download&id=14O91N5OlVkvdGxXNJUj5jIsV5RexhzbB) (as mentioned). The `sessions.csv` dataset includes players’ hashed email, the [actual] start and end time in the format of date and 24-hour time, and the original start and end time of the sessions in UNIX format. Further, `sessions.csv` does not contain any anomalies. However, the dataset being used in this study is derived from `players.csv` because this is the only dataset that contains two variables related to the research questions, `Age` and `Total Playtimes`. This dataset contains a total of 196 observations and nine variables. These variables are listed and described in the table below:"
    ]
@@ -113,12 +113,12 @@
     "        <tr style=\"border: 0px solid black;\">\n",
     "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Start Time</td>\n",
     "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\"><code>chr</code></td>\n",
-    "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Start time of sessions in 24-hour format and date</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Start time (24-hour) of sessions with date (dd/mm/yyyy)</td>\n",
     "        </tr>\n",
     "        <tr style=\"border: 0px solid black;\">\n",
     "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Start Time</td>\n",
     "            <td style=\"border: 0px solid black; text-align: center; padding: 8px;\"><code>chr</code></td>\n",
-    "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">End time of sessions in 24-hour format and date</td>\n",
+    "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">End time (24-hour) of sessions with date (dd/mm/yyyy)</td>\n",
     "        </tr>\n",
     "        <tr style=\"border: 0px solid black;\">\n",
     "            <td style=\"border: 0px solid black; text-align: left; padding: 8px;\">Original Start Time</td>\n",
@@ -140,7 +140,7 @@
    "id": "6e4c2f7d-a145-4357-96a8-35ca27f86b35",
    "metadata": {},
    "source": [
-    "It is important to note while the data can be used to provide meaningful insights into relevant topics, there are potential issues (anomalies) that exist in this data. This includes (1) missing values for `Individual ID` and `Organization Name` (e.g. reported as NA), (2) potential inaccuracy in the self-reported age (e.g. age 91 and 99) and (3) playtime might not correlate to contribution levels to the study (e.g microphone can also be used)"
+    "It is important to note while the data can be used to provide meaningful insights into relevant topics, there are potential issues (anomalies) that exist in `players.csv`. This includes (1) missing values for `Individual ID` and `Organization Name` (e.g. reported as NA), (2) potential inaccuracy in the self-reported age (e.g. age 91 and 99) and (3) playtime might not correlate to contribution levels to the study (e.g microphone can also be used)"
    ]
   },
   {
